Fixes Feedback window, which has been broken since January. Adds a scripts/relay-feedback.sh script which can be used to copy the feedback file to a central location. Fixes styling of close boxes on feedback dialog and response alert. adjusts position of alert to be visible.

--- a/css/monarch-common.css
+++ b/css/monarch-common.css
@@ -984,8 +984,8 @@ a:hover .hilite, a:active .hilite {
 }
 
 .feedback-close {
-  margin-top:-2px;
-  margin-right:-10px;
+  margin-top:3px;
+  margin-right:-15px;
 }
 
 .feedback-drag-instructions {
